gl33-master/src/test/deca/context/invalid/other/appelFauxFonction7.deca
// Test de contexte invalide : appel faux de la fonction (string au lieu de float)

class MyClass{

    float puissance(float a){
        return a*a;
    }
}

{
    MyClass m = new MyClass();
    int x = m.puissance("3.5");
}
